# examples

./: .gitignore  .prettierrc.cjs  LICENSE  README.md  readme.md
auth0/: README.md  package-lock.json  package.json
cdk8s-nginx/: README.md  main.ts  package-lock.json  package.json  tsconfig.json
datadog-docker-compose/: README.md  docker-compose.yml
datadog-winston/: README.md  package-lock.json  package.json
digitalocean-kubernetes-github-actions/: Dockerfile  README.md  package-lock.json  package.json
docusign/: README.md  embeddedSigning.js
github-linear-sync/: README.md  package-lock.json  package.json
gmail-claude/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
hubspot/: .gitignore  README.md  package-lock.json  package.json
lambda-sendgrid-cdk/: README.md  cdk.json  package.json  tsconfig.json
mailchimp-transactional/: README.md  package-lock.json  package.json
nextjs-braintree/: .env  README.md  package-lock.json  package.json
nextjs-sendgrid/: README.md  package-lock.json  package.json
nextjs-stripe/: README.md  package-lock.json  package.json
notion/: README.md  package-lock.json  package.json
openai-api/: README.md  package-lock.json  package.json  tsconfig.json
pulumi-azure-functions/: .gitignore  Pulumi.yaml  README.md  deploy.mjs  helpers.ts  (+3 more)
recaptcha-django/: README.md  manage.py  pyproject.toml
recaptcha-django/pages/: apps.py  fetch_recaptcha_secret_key.py  views.py
recaptcha-django/pages/templates/pages/: index.html
recaptcha-django/recaptcha_django/: asgi.py  settings.py  urls.py  wsgi.py
(+134 files in other folders)
