[tool.poetry]
name = "django-recaptcha"
version = "0.1.0"
description = ""
authors = ["Sam Magura <srmagura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
requests = "^2.28.1"
zero-sdk = "^0.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
